--- a/LAB 5 - Tablas Hash y Colas de prioridad/Views/Home/Index.cshtml
+++ b/LAB 5 - Tablas Hash y Colas de prioridad/Views/Home/Index.cshtml
@@ -3,29 +3,28 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="~/Views/Home/Login.cshtml" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+    <h1>LAB 5</h1>
+    <p class="lead">“Tablas Hash y colas de prioridad”</p>
+    <p>
+        <b>
+            <em>José Vinicio De León 1072619</em>
+            <br />
+            <em>Javier Andrés Morales 1210219</em>
+        </b>
+    </p>
+
+    <ul>
+        <li>Implementación y uso de colas de prioridad.</li>
+        <li>Implementación y uso de tablas hash.</li>
+        <li>Utilizar y complementar ambas estructuras de datos en un sistema funcional.</li>
+    </ul>
+    <br />
+
+    <div class="text-center">
+        <button type="button" onclick="location.href='@Url.Action("Login","User")'" class="btn btn-default text-center">Login</button>
+    </div>
+
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
