--- a/LAB 5 - Tablas Hash y Colas de prioridad/Views/Task/CreateTask.cshtml
+++ b/LAB 5 - Tablas Hash y Colas de prioridad/Views/Task/CreateTask.cshtml
@@ -16,7 +16,7 @@
 
     <form class="form-horizontal">
         <fieldset>
-            <legend>New Task</legend>
+            <legend>Nueva tarea</legend>
 
             <div class="form-group">
                 <label for="inputTitle" class="col-lg-2 control-label">Titulo</label>
