--- a/LAB 5 - Tablas Hash y Colas de prioridad/Views/User/Index_admin.cshtml
+++ b/LAB 5 - Tablas Hash y Colas de prioridad/Views/User/Index_admin.cshtml
@@ -8,7 +8,7 @@
 <h4>@ViewBag.Message</h4>
 
 <hr />
-<h3>Ver tareas por developer</h3>
+<h3>Ver tareas por Developer</h3>
 @Html.ActionLink("Ver developers en específico", "WatchDevelopers_admin", "Task")
 
 <h3>Ver todas las tareas</h3>
